Apostrophe 2: Make style fix for subscribe button more specific, so it doesn't affect the widgets that didn't have a contrast issue.

--- a/apostrophe-2/style.css
+++ b/apostrophe-2/style.css
@@ -1289,7 +1289,7 @@ a:active {
 }
 
 /* Follow Blog widget */
-#subscribe-blog input[type="submit"] {
+.sidebar-primary #subscribe-blog input[type="submit"] {
 	color: #fff;
 }
 
